--- a/co-kind-report/main.tex
+++ b/co-kind-report/main.tex
@@ -41,6 +41,7 @@
                {<=}{{$\leq$}}2 {=>}{{$\Rightarrow$}}2 
                {\ .}{{$\circ$}}2 {\ .\ }{{$\circ$}}2
                {>>}{{>>}}2 {>>=}{{>>=}}2
+               {++}{{$++$}}2
                {|}{{$\mid$}}1               
    }  
 
@@ -64,7 +65,8 @@
   keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
   keywordstyle=\color{blue},       % keyword style
   language=Octave,                 % the language of the code
-  morekeywords={where, let,data,assert},            % if you want to add more keywords to the set
+  morekeywords={where, let,data,assert,Word8,Word32,Word64,Bool,
+    Stream,trigger,Spec},            % if you want to add more keywords to the set
   rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
   showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
   showstringspaces=false,          % underline spaces within strings only
